--- a/Content/mainstyle.scss
+++ b/Content/mainstyle.scss
@@ -1,3 +1,149 @@
-﻿li{
-    background-color:orange;
+﻿@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;800&display=swap');
+$main_color: #B61E03;
+$font: 'Open Sans', sans-serif;
+
+
+
+li:hover {
+    color: black;
+}
+
+.navbar_main {
+    overflow: hidden;
+    top: 0;
+    opacity: .7;
+    position: sticky;
+    z-index: 999;
+    width: 80%;
+    margin: 0 auto;
+    background-color: white;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    transition:ease-in-out .7s;
+    &:hover{
+        opacity:1;
+    }
+
+    .nav_again {
+        display: flex;
+        flex-direction: row;
+
+        .nav-hover {
+            list-style: none;
+            margin-right: 50px;
+            font-size: 16px;
+
+            a {
+                color: $main_color;
+                position: relative;
+                transition: ease-in-out 0.5s;
+
+                &:before {
+                    transition: ease-in-out 0.5s;
+                    content: "";
+                    position: absolute;
+                    background-color: black;
+                    width: 0;
+                    left: -10%;
+                    height: 2px;
+                    color: $main_color;
+                    margin-top: 25px;
+                }
+
+                &:hover:before {
+                    width: 120%;
+                }
+
+                &:hover {
+                    text-decoration: none;
+                    color: black;
+                }
+            }
+
+        }
+    }
+}
+.cards_container{
+    display:flex;
+    flex-direction:row;
+    flex-wrap:wrap;
+    gap:50px;
+    .cards{
+        background-color:#ddcfcf8c;
+        display:flex;
+        flex-direction:column;
+    }
+}
+.slider {
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+
+    .slides {
+        position: relative;
+        width: calc(100% * 3); /* adjust based on the number of slides */
+        left: 0;
+        transition: left 0.5s ease;
+        display: flex;
+        flex-direction: row;
+
+
+        .slide {
+            float: left;
+            width: calc(100% / 3);
+
+
+            .card {
+                border: 1px solid #ccc;
+                border-radius: 15px;
+                box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+                margin: 20px;
+                height: 200px;
+                transition: ease-in-out .5s;
+              
+
+                &:hover {
+                    transform: translateY(-5px);
+                    box-shadow: 5px 5px 15px rgba(0,0,0,.9);
+                }
+
+                .card-body {
+                    padding: 20px;
+                    text-align: center;
+                    font-size: 2rem;
+                    font-family: $font;
+                    font-weight: 800;
+                }
+            }
+        }
+    }
+}
+.prev,
+.next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 10px;
+    font-size:3rem;
+    border: none;
+    color:$main_color;
+    background-color:white;
+    opacity:.6;
+    cursor: pointer;
+    transition:ease-in-out .5s;
+}
+
+.prev {
+    left: -10px;
+}
+
+.next {
+    right: -10px;
+}
+.prev:hover,.next:hover{
+    opacity:1;
 }
