--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,82 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<head>
 
-<div class="main_container">
-    <div><img src="~/wwwroot/images/ismlogo.jpg" /></div>
+    <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
+ 
+</head>
+<body>
 
-</div>
+    <div class="home_main_container">
+
+        <h1 class="layout_title" style="text-align:left;">About us</h1>
+        <p>
+            As ISM logistics, we were established in Istanbul, which takes the pulse of the industry, with an innovative perspective.<br /><br />
+
+            With our strong connections around the world, we offer a logistics service that you have not experienced before.<br /><br />
+
+            In addition to our young and dynamic team, we aim to provide specific and solution-oriented services with our experienced staff of more than 10 years in the industry.
+        </p>
+
+        <h1 class="layout_title" style="text-align:center; margin-top: 10%;">Hizmetlerimiz</h1>
+
+        <div class="slider">
+            <div class="slides">
+                <div class="slide">
+                    <div class="card">
+                        <div class="card-body">INTERNATIONAL AIR TRANSPORT</div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="card">
+                        <div class="card-body">INTERNATIONAL ROAD TRANSPORT</div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="card">
+                        <div class="card-body">INTERNATIONAL MARITIME TRANSPORT</div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="card">
+                        <div class="card-body">MICRO EXPORT SERVICES</div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="card">
+                        <div class="card-body">INTERNATIONAL FREIGHT TRANSIT</div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="card">
+                        <div class="card-body">INTERNATIONAL PERSONAL EFFECT TRANSPORT</div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="card">
+                        <div class="card-body">DOMESTIC DISTRIBUTION AND STORAGE SERVICES</div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="card">
+                        <div class="card-body">INSURANCE SERVICES</div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="card">
+                        <div class="card-body">CONSULTANCY</div>
+                    </div>
+                </div>
+            </div>
+            <button class="prev"><</button>
+        <button class="next">></button>
+
+        </div>
+
+
+
+    </div>
+
+<script src="~/Content/Jscript.js"></script>
+</body>
