--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,50 +4,64 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
-   
+    <link href="~/Content/mainstyle.min.css" rel="stylesheet" />
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
     <div class="navbar_main">
 
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" title="more options">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <ul class=" nav_Again navbar-nav">
-              <li class="nav-hover"><a href="/"><img style="width: 350px" src="~/wwwroot/images/ismlogo.jpg" /></a></li>
-                </ul>     
-            <div class="navbar-collapse collapse">
-                <ul class="nav_Again navbar-nav">  
-                    <li class="nav-hover">@Html.ActionLink("Hakkımızda", "About", "Home")</li>
-                    <li class="nav-hover">@Html.ActionLink("İletişim", "Contact", "Home")</li>
-                    <li class="nav-hover">@Html.ActionLink("Hizmetlerimiz", "Hizmetlerimiz", "Home")</li>
+        <ul class="nav_again">
+            <li class="nav"><a href="/"><img style="width: 150px" src="~/wwwroot/images/ismlogo.jpg" /></a></li>
+        </ul>
+        <ul class="nav_again">
+            <li class="nav-hover ">@Html.ActionLink("Home", "Index", "Home")</li>
+            <li class="nav-hover">@Html.ActionLink("Kurumsal", "Kurumsal", "Home")</li>
+            <li class="nav-hover">@Html.ActionLink("Our services", "Hizmetlerimiz", "Home")</li>
+            <li class="nav-hover">@Html.ActionLink("Contact", "İletişim", "Home")</li>
+        </ul>
+        @*<ul class="nav_again">
+            <li class="nav-hover active"><a href="/Home/Index" class="nav-link">Home</a></li>
+            <li class="nav-hover"><a href="/Home/Kurumsal" class="nav-link">Kurumsal</a></li>
+            <li class="nav-hover"><a href="/Home/Hizmetlerimiz" class="nav-link">Our services</a></li>
+            <li class="nav-hover"><a href="/Home/İletişim" class="nav-link">Contact</a></li>
+        </ul>*@
 
-                </ul>
-            </div>
     </div>
     <div class="container body-content">
         @RenderBody()
+        
         <hr />
         <footer>
-
-
-            <address>
-                Maslak Mah. Ahi Evran Cad. 42 Maslak 4/542
-                34398 SARIYER İSTANBUL / TÜRKİYE
-                
+            <address class="flex_items">
+                <p class="flex_items">
+                    <i class="fi fi-sr-marker"></i>
+                    Maslak Mah. Ahi Evran Cad. 42 Maslak 4/542
+                    34398 SARIYER İSTANBUL / TÜRKİYE
+                </p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3005.913081203791!2d29.021749311178517!3d41.11458931017649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab5be34340059%3A0xb290bf71d730dc2f!2sMaslak%20Mh%2C%20Ahi%20Evran%20Cd.%20No%3A4%20D%3A42%2C%2034398%20Sar%C4%B1yer%2F%C4%B0stanbul!5e0!3m2!1sen!2str!4v1683315514198!5m2!1sen!2str" width="400" height="300" style="border:0; flex:50%; border-radius:15px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </address>
+            <address >
+                <div class="flex_items">
+                <i class="fi fi-sr-phone-call" style="font-size:30px;"></i>
+                <p>+90 535 817 53 98</p>
+                </div>
+                </address>
+                <address>
+                <div class="flex_items">
+                 <i class="fi fi-sr-envelope" style="font-size:30px";></i>
+                <p>
+                <a href="mailto:info@ismlogistic.com.tr">info@ismlogistic.com.tr</a><br />
+                </p>
+                </div>
 
-            <address>
-                <strong>Support:</strong>   <a href="info@ismlogistic.com.tr">info@ismlogistic.com.tr</a><br />
-              
             </address>
             <p>&copy; @DateTime.Now.Year - ISM Logistics</p>
         </footer>
     </div>
-
+    <script src="~/Content/Jscript.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
