--- a/Content/mainstyle.css
+++ b/Content/mainstyle.css
@@ -4,7 +4,6 @@ li:hover {
 }
 
 .navbar_main {
-  overflow: hidden;
   top: 0;
   opacity: 0.7;
   position: sticky;
@@ -131,4 +130,25 @@ li:hover {
 
 .prev:hover, .next:hover {
   opacity: 1;
+}
+
+.havayolu_maindiv {
+  border: 1px solid black;
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+}
+.havayolu_maindiv div {
+  flex: 50%;
+}
+.havayolu_maindiv div img {
+  width: 100%;
+  height: 100%;
+}
+.havayolu_maindiv div {
+  flex: 50%;
+}
+.havayolu_maindiv div p {
+  display: flex;
+  flex-direction: column-reverse;
 }
