--- a/Content/mainstyle.scss
+++ b/Content/mainstyle.scss
@@ -9,7 +9,6 @@ li:hover {
 }
 
 .navbar_main {
-    overflow: hidden;
     top: 0;
     opacity: .7;
     position: sticky;
@@ -22,19 +21,22 @@ li:hover {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    transition:ease-in-out .7s;
-    &:hover{
-        opacity:1;
+    transition: ease-in-out .7s;
+
+    &:hover {
+        opacity: 1;
     }
 
     .nav_again {
         display: flex;
         flex-direction: row;
+       
 
         .nav-hover {
             list-style: none;
             margin-right: 50px;
             font-size: 16px;
+            
 
             a {
                 color: $main_color;
@@ -62,7 +64,6 @@ li:hover {
                     color: black;
                 }
             }
-
         }
     }
 }
@@ -146,4 +147,31 @@ li:hover {
 }
 .prev:hover,.next:hover{
     opacity:1;
+}
+
+.havayolu_maindiv{
+    border:1px solid black;
+    display:flex;
+    align-items:flex-start;
+    gap:20px;
+    
+    div{
+        flex:50%;
+        
+
+    img{
+        width:100%;
+        height:100%;
+    }
+    }
+
+       
+    div{
+        flex:50%;
+    p{ 
+
+        display:flex;
+        flex-direction:column-reverse;
+    }
+    }
 }
